assets/stylesheets/pages/home.scss
@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@keyframes socialin {
  from {
    font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;
  }
  to {
    font-variation-settings: "TRAP" 0, "ital" 0, "wght" 500;
  }
}

@keyframes socialout {
  from {
    font-variation-settings: "TRAP" 0, "ital" 0, "wght" 500;
  }
  to {
    font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;
  }
}

@keyframes workin {
  from {
    font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;
  }
  to {
    font-variation-settings: "TRAP" 0, "ital" 0, "wght" 500;
  }
}

@keyframes workout {
  from {
    font-variation-settings: "TRAP" 0, "ital" 0, "wght" 500;
  }
  to {
    font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;
  }
}

.home {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  height: 100vh;
  overflow-y: hidden;
  position: relative;
  user-select: none;
  width: 608vh;
}

.home-contact {
  display: grid;
  position: relative;
}

.home-contact-drawing-1 {
  left: 123vh;
  position: absolute;
  top: 10vh;
  width: 17vh;
}

.home-contact-drawing-2,
.home-intro-center-drawing-1,
.home-intro-center-drawing-2,
.home-work-drawing-1,
.home-work-drawing-2 {
  animation-iteration-count: infinite;
  animation-name: rotate;
  animation-timing-function: linear;
}

.home-contact-drawing-2 {
  animation-direction: reverse;
  animation-duration: 30s;
  bottom: -13vh;
  left: 41vh;
  position: absolute;
  width: 45vh;
}

.home-contact-link-1,
.home-contact-link-2,
.home-contact-link-3,
.home-contact-link-4 {
  animation-duration: 0.3s;
  animation-fill-mode: forwards;
  animation-name: socialout;
  color: $trinidad-orange;
  font-family: $font-pleasure;
  font-feature-settings: 'salt' on, 'ss02' on, 'ss01' on, 'ss04' on;
  font-size: 18vh;
  font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;
  text-transform: uppercase;

  &:hover {
    animation-name: socialin;
  }
}

.home-contact-link-1 {
  justify-self: start;
  margin-left: 25vh;
}

.home-contact-link-2 {
  justify-self: end;
  margin-right: 26vh;
  margin-top: -6vh;
}

.home-contact-link-3 {
  justify-self: center;
  margin-top: -6vh;
}

.home-contact-link-4 {
  justify-self: end;
  margin-right: 19vh;
  margin-top: -6vh;
}

.home-contact-links {
  align-content: center;
  display: grid;
  grid-auto-rows: min-content;
  margin-top: 9vh;
}

.home-contact-marquee {
  color: $trinidad-orange;
  font-feature-settings: 'salt' on, 'ss02' on;
  font-size: 6vh;
  left: 7vh;
  letter-spacing: 0.2vh;
  position: absolute;
  text-transform: uppercase;
  top: 0;
  transform-origin: left top;
  transform: rotate(90deg);
}

.home-intro {
  display: grid;
  grid-auto-rows: min-content 1fr min-content;
  padding: 7.5vh;
  row-gap: 7.5vh;
}

.home-intro-bottom {
  display: grid;
  grid-auto-columns: 40vh;
  grid-auto-flow: column;
  justify-content: end;
  column-gap: 7.5vh;
}

.home-intro-bottom-link {
  font-family: $font-pleasure;
  font-size: 2vh;
  font-variation-settings: "TRAP" 100, "ital" 0, "wght" 620;
}

.home-intro-bottom-text,
.home-intro-top-text {
  color: $trinidad-orange;
  font-feature-settings: 'salt' on, 'ss02' on;
  font-size: 2.2vh;
  font-weight: 500;
  text-align: justify;
}

.home-intro-center {
  position: relative;
}

.home-intro-center-drawing-1 {
  animation-duration: 15s;
  left: 94vh;
  position: absolute;
  top: 14vh;
  width: 20vh;
}

.home-intro-center-drawing-2 {
  animation-duration: 15s;
  left: 94vh;
  position: absolute;
  top: 15vh;
  width: 20vh;
}

.home-intro-center-line {
  left: 20vh;
  position: absolute;
  top: -12vh;
  width: 87vh;
}

.home-intro-top {
  display: grid;
  grid-auto-flow: column;
  justify-content: space-between;
}

.home-work {
  column-gap: 7.5vh;
  display: grid;
  grid-auto-flow: column;
  justify-content: space-between;
  position: relative;
}

.home-work-drawing-1,
.home-work-drawing-2,
.home-work-drawing-3 {
  position: absolute;
}

.home-work-drawing-1 {
  animation-direction: reverse;
  animation-duration: 7s;
  width: 14vh;
  left: 17vh;
  top: 5vh;
}

.home-work-drawing-2 {
  animation-duration: 20s;
  bottom: -11vh;
  right: 2vh;
  width: 22vh;
}

.home-work-drawing-3 {
  left: 91vh;
  top: 13vh;
  width: 24vh;
}

.home-work-line-1,
.home-work-line-2 {
  height: 100vh;
}

.home-work-text {
  color: $trinidad-orange;
  font-feature-settings: 'salt' on, 'ss02' on;
  font-size: 10.4vh;
  letter-spacing: -0.3vh;
  line-height: 1;
  margin-top: 26vh;
  text-align: justify;
  transform: rotate(-3deg);
  user-select: none;
  width: 100%;
}

.home-work-text-link {
  animation-duration: 0.3s;
  animation-fill-mode: forwards;
  animation-name: workout;
  font-family: $font-pleasure;
  font-variation-settings: "TRAP" 100, "ital" 0, "wght" 500;

  &:hover {
    animation-name: workin;
  }
}

.home-work-text-transform {
  transform: rotate(2.91deg);
}

